# vibe-todo

./: CMakeLists.txt  README.md  main.cpp  session.org  shell.nix  state.hpp
src/: main.cpp  persistence.cpp  persistence.hpp  state.hpp
